# Full-stack-Todo-App

./: .env.example  .gitignore  CONTRIBUTORS.md  README.md  pyproject.toml  tasks.json
.specify/memory/: constitution.md
apps/backend/: .railwayignore  Procfile  README.md  app.py  app.yml  check_db_schema.py  create_tables.py  debug_main.py  main.py  pyproject.toml  railway.toml  recreate_tables.py  requirements.txt  run.py  server.py  setup.py  start_app.py  start_server.py  sync_db_schema.py  update_schema.py  update_user_schema.py
apps/backend/docs/: api-endpoints.md  environment-variables.md
apps/backend/src/: main.py
apps/backend/src/api/: auth.py  tasks.py
apps/backend/src/core/: __init__.py  config.py  database.py  logging_config.py  middleware.py  security.py
apps/backend/src/models/: __init__.py  task.py  user.py
apps/backend/src/services/: auth_service.py  task_service.py
apps/frontend/: next.config.js  package-lock.json  package.json
apps/frontend/__tests__/: AuthContext.test.js  TaskForm.test.js  TaskItem.test.js  TaskList.test.js
apps/frontend/src/components/: CategoryOverview.tsx  EmptyState.tsx  ErrorBoundary.tsx  Layout.tsx  ProtectedRoute.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
apps/frontend/src/contexts/: auth.tsx
apps/frontend/src/pages/: 401.tsx  403.tsx  500.tsx  _app.tsx  dashboard.tsx  index.tsx  login.tsx  signup.tsx
apps/frontend/src/services/: api.ts  auth.ts
apps/frontend/src/types/: index.ts
apps/frontend/styles/: globals.css
docs/: deployment-guide.md  production-verification-checklist.md
history/prompts/001-todo-console-app/: 001-todo-console-app-plan.plan.prompt.md  001-todo-specification.spec.prompt.md  001-todo-tasks-generation.tasks.prompt.md
history/prompts/002-multi-user-todo-auth/: 2-create-auth-spec.spec.prompt.md  3-create-auth-plan.plan.prompt.md  4-create-auth-tasks.tasks.prompt.md  PHR-0001-tasks-full-stack-todo-app-implementation.tasks.prompt.md
history/prompts/constitution/: 1-amend-constitution.constitution.prompt.md
specs/001-todo-console-app/: spec.md  tasks.md
specs/001-todo-console-app/checklists/: requirements.md
specs/001-todo-console-app/plan/: data-model.md  impl.md  quickstart.md  research.md
specs/001-todo-console-app/plan/contracts/: cli-contracts.md
specs/002-multi-user-todo-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-multi-user-todo-auth/checklists/: requirements.md
specs/002-multi-user-todo-auth/contracts/: api-contracts.md
tests/: __init__.py
tests/test_cli/: __init__.py  conftest.py  test_add.py  test_add_integration.py  test_delete.py  test_delete_integration.py  test_list.py  test_list_integration.py  test_toggle.py  test_toggle_integration.py  test_update.py  test_update_integration.py
tests/test_models/: __init__.py  test_enums.py  test_task.py
tests/test_repositories/: __init__.py  test_base.py  test_memory_repository.py
tests/test_services/: __init__.py  test_task_service.py
tests/test_ui/: __init__.py  test_display.py
todo_console_app/: __init__.py  common.py  main.py
todo_console_app/models/: __init__.py  enums.py  task.py
todo_console_app/repositories/: __init__.py  base.py  file.py  memory.py
todo_console_app/services/: __init__.py  task_service.py
todo_console_app/ui/: __init__.py  display.py
